added radio questions

--- a/src/public/homepage/index.html
+++ b/src/public/homepage/index.html
@@ -46,6 +46,26 @@
                 <button onclick="submitAnswer('')">submit answer</button>
             </div>
 
+            <div class="answer-form" id="radioAnswerForm">
+                <div class="div-button" id="radioOne" style="background-color: rgb(210, 212, 219);" onclick="toggleRadio('radioOne', 1)">
+                    <h1 class="noto-emoji" id="radioA">1.</h1>
+                </div>
+                <div class="div-button" id="radioTwo" style="background-color: rgb(210, 212, 219);" onclick="toggleRadio('radioTwo', 2)">
+                    <h1 class="noto-emoji" id="radioB">2.</h1>
+                </div>
+                <div class="div-button" id="radioThree" style="background-color: rgb(210, 212, 219);" onclick="toggleRadio('radioThree', 3)">
+                    <h1 class="noto-emoji" id="radioC">3.</h1>
+                </div>
+                <div class="div-button" id="radioFour" style="background-color: rgb(210, 212, 219);" onclick="toggleRadio('radioFour', 4)">
+                    <h1 class="noto-emoji" id="radioD">4.</h1>
+                </div>
+                <div class="div-button" id="radioFive" style="background-color: rgb(210, 212, 219);" onclick="toggleRadio('radioFive', 5)">
+                    <h1 class="noto-emoji" id="radioE">5.</h1>
+                </div>
+
+                <button onclick="submitAnswer('')">submit answer</button>
+            </div>
+
             <!--<button onclick="getNewQuestion()">get new question</button>-->
         </div>
         
