--- a/src/public/homepage/index.html
+++ b/src/public/homepage/index.html
@@ -69,15 +69,15 @@
             <!--<button onclick="getNewQuestion()">get new question</button>-->
         </div>
         
-        <div class="main-game-element option-container" id="optionContainer">
-            <div class="div-button">
-                <h1>sound effects: 🔊</h1>
-            </div>
-            <div class="div-button">
-                <h1>music: 🔊</h1>
+        <div class="main-game-element option-container" id="optionContainer" style="display: none;">
+            <div class="div-button" onclick="toggleSfxMute()">
+                <h1 class="noto-emoji" id="sfxToggleText">sfx: 🔊</h1>
             </div>
             <div class="div-button">
                 <h1>By theohaines @ <a href="https://theohaines.xyz">theohaines.xyz</a></h1>
+            </div>
+            <div class="div-button">
+                <h1>Music by HeatleyBros @ <a href="https://www.youtube.com/watch?v=8FbYFXt5pz4">youtube.com</a></h1>
             </div>
         </div>
     </div>
