fix radio questions

--- a/src/public/homepage/index.html
+++ b/src/public/homepage/index.html
@@ -50,19 +50,19 @@
             </div>
 
             <div class="answer-form" id="radioAnswerForm">
-                <div class="div-button" id="radioOne" style="background-color: rgb(210, 212, 219);" onclick="toggleRadio('radioOne', 1)">
+                <div class="div-button" id="radioOne" style="background-color: rgb(210, 212, 219);" onclick="toggleRadio('radioOne', 'a')">
                     <h1 class="noto-emoji" id="radioA">1.</h1>
                 </div>
-                <div class="div-button" id="radioTwo" style="background-color: rgb(210, 212, 219);" onclick="toggleRadio('radioTwo', 2)">
+                <div class="div-button" id="radioTwo" style="background-color: rgb(210, 212, 219);" onclick="toggleRadio('radioTwo', 'b')">
                     <h1 class="noto-emoji" id="radioB">2.</h1>
                 </div>
-                <div class="div-button" id="radioThree" style="background-color: rgb(210, 212, 219);" onclick="toggleRadio('radioThree', 3)">
+                <div class="div-button" id="radioThree" style="background-color: rgb(210, 212, 219);" onclick="toggleRadio('radioThree', 'c')">
                     <h1 class="noto-emoji" id="radioC">3.</h1>
                 </div>
-                <div class="div-button" id="radioFour" style="background-color: rgb(210, 212, 219);" onclick="toggleRadio('radioFour', 4)">
+                <div class="div-button" id="radioFour" style="background-color: rgb(210, 212, 219);" onclick="toggleRadio('radioFour', 'd')">
                     <h1 class="noto-emoji" id="radioD">4.</h1>
                 </div>
-                <div class="div-button" id="radioFive" style="background-color: rgb(210, 212, 219);" onclick="toggleRadio('radioFive', 5)">
+                <div class="div-button" id="radioFive" style="background-color: rgb(210, 212, 219);" onclick="toggleRadio('radioFive', 'e')">
                     <h1 class="noto-emoji" id="radioE">5.</h1>
                 </div>
 
