--- a/src/public/homepage/index.html
+++ b/src/public/homepage/index.html
@@ -11,6 +11,7 @@
         <h1>Emoji game</h1>
         <div class="nav-right">
             <button class="noto-emoji small-button" onclick="toggleElementVisibility('optionContainer'); toggleElementVisibility('answerFormContainer')">options ⚙️</button>
+            <button class="noto-emoji small-button" onclick="window.location.href='https://theohaines.xyz/blog/index.html'">Patch notes 📝</button>
             <button class="noto-emoji small-button" onclick="window.location.href='https://github.com/Theohaines/emoji-game/tree/main'">GitHub 🐙</button>
             <button class="noto-emoji small-button" onclick="window.location.href='https://theohaines.xyz'">main page 🌐</button>
         </div>
