add system emoji toggle

--- a/src/public/homepage/index.html
+++ b/src/public/homepage/index.html
@@ -78,6 +78,9 @@
             <div class="div-button" onclick="toggleSfxMute()">
                 <h1 class="noto-emoji" id="sfxToggleText">sfx: 🔊</h1>
             </div>
+            <div class="div-button" onclick="toggleSystemEmojis()">
+                <h1 class="noto-emoji">use system emojis: 📱</h1>
+            </div>
             <div class="div-button">
                 <h1>By theohaines @ <a href="https://theohaines.xyz">theohaines.xyz</a></h1>
             </div>
